test: apply Diver audit fix program (C1-C7, security toolkit, gates green)
Second-audit fix program on the test branch: 7 critical runtime-proven
bugs fixed, 12 high findings addressed, new lua/security/ toolkit
(RCE/MITM/zombie/supply-chain, 76/76 checks), ELI5 LuaCATS docs, and
stylua 4-space reunification across the tree.

Gates: luacheck 1 warning (excluded WIP file) / 0 errors; stylua clean
except 15 WIP files + 2 files the Stylua 2.5.2 parser cannot handle;
LuaLS strict: zero in all targeted categories, 6 documented intentional
await-in-sync dual-mode yields; headless startup 3/3 exit 0 (~300ms,
was up to 5.2s).

See CHANGELOG.md for the full sourced list. Matt's unrelated WIP
(formatter adapters, lsp drafts, skills restructure, lazy-lock.json)
is deliberately left uncommitted in the working tree.